[Fix][Admin] Search panel list & input overlap.

--- a/portal/src/main/resources/public/admin/css/modules.less
+++ b/portal/src/main/resources/public/admin/css/modules.less
@@ -1269,6 +1269,7 @@ nav.search-container-left{
 		//height: 500px;
 		position: absolute;
   		height: calc(~"100% - 50px");
+        top: 50px;
 		overflow-y: scroll;
 	}
 }
